compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0121_tuple_two.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0121_tuple_two.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(1, 2)
stderr:
<empty>
