compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0126_tuple_with_ident.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0126_tuple_with_ident.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(1, 2, 3)
stderr:
<empty>
