compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0157_nested_tuple_list.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0157_nested_tuple_list.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
[(1, 2), (3, 4), (5, 6)]
stderr:
<empty>
