compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0202_record_one_field.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0202_record_one_field.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Point { x: 1 }
stderr:
<empty>
