compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0205_record_nested.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0205_record_nested.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Point { pos: Point { x: 1, y: 2 }, name: point }
stderr:
<empty>
