compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0207_record_field_access.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0207_record_field_access.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
stderr:
<empty>
