compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0001_annotated_value_bool.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0001_annotated_value_bool.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
stderr:
<empty>
